tests/NormalTests/paczka1/small_fuzzy/83985547.err
Error in line 2: x0mEO A711 82,10
Error in line 5: KAj4g629py A461 32,9
Error in line 11: KAj4g629py A711 84,8
